--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Leela Pathivada</h1>
-    <img src="../4.3 HTML Porfolio Project/leela.jpg" height="140">
+    <img src="./leela.jpg" height="140">
     <h2>Summary</h2>
     <p>I am a hardworking and dedicated individual in administration and a developer</p>
     <hr/>
@@ -42,7 +42,7 @@
     <hr/>
     <h2>Other</h2>
     <ul>
-        <li><a href="hobbies.html" >My Hobbies </a></li>
+        <li><a href="./hobbies.html" >My Hobbies </a></li>
         <li><a href="./contact.html" > contact</a></li>
     </ul>
     <hr/>
